hedtools/tests/data/invalid_wiki_schemas/HED_schema_no_start.mediawiki
HED version:8.0.0-alpha.1


'''Unit classes'''

